--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,6 @@
-# OS X
-.DS_Store
-
 # Xcode
-build/
+*.DS_Store
+*/build/*
 *.pbxuser
 !default.pbxuser
 *.mode1v3
@@ -11,23 +9,17 @@ build/
 !default.mode2v3
 *.perspectivev3
 !default.perspectivev3
-xcuserdata/
-*.xccheckout
+xcuserdata
 profile
 *.moved-aside
 DerivedData
+.idea/
 *.hmap
-*.ipa
+*.xccheckout
+*.xcworkspace
+!default.xcworkspace
 
-# Bundler
-.bundle
+#CocoaPods
+Pods
 
-Carthage
-# We recommend against adding the Pods directory to your .gitignore. However
-# you should judge for yourself, the pros and cons are mentioned at:
-# http://guides.cocoapods.org/using/using-cocoapods.html#should-i-ignore-the-pods-directory-in-source-control
-# 
-# Note: if you ignore the Pods directory, make sure to uncomment
-# `pod install` in .travis.yml
-#
-# Pods/
+
